--- a/CNN-Cancer-Detection.ipynb
+++ b/CNN-Cancer-Detection.ipynb
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1073,7 @@
      "output_type": "stream",
      "text": [
       "Found 57458 validated image filenames.\n",
-      "\u001b[1m1796/1796\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m57s\u001b[0m 32ms/step\n",
+      "\u001b[1m1796/1796\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m55s\u001b[0m 31ms/step\n",
       "Saving submission to: /Volumes/WD5TBForMac-1/CU-Boulder-MSCS/Term4/DeepLearning/Week3/submission.csv\n"
      ]
     }
@@ -1105,7 +1105,7 @@
     "\n",
     "# submissions\n",
     "submission = pd.DataFrame({\n",
-    "    'id': [os.path.splitext(fname)[0] for fname in test_gen.filenames],\n",
+    "    'id': test_df['id'].str.replace('.tif', ''),\n",
     "    'label': predicted_labels\n",
     "})\n",
     "\n",
