Update Table of Contents

--- a/CNN-Cancer-Detection.ipynb
+++ b/CNN-Cancer-Detection.ipynb
@@ -31,12 +31,10 @@
     "1. Import depencies or libraries that need to be used in this project\n",
     "2. EDA step. Read the data from CVS file and Clean up data or reformat data for the purposes of the project\n",
     "3. EDA step. Display plots for the input data\n",
-    "4. Apply Logistic Regression and display plots\n",
-    "5. Apply Decision Trees and display plots\n",
-    "6. Apply Random Forest and display plots\n",
-    "7. Apply Gradient Boosting Machines (GBM) and display plots\n",
-    "8. Apply Support Vector Machines (SVM) and display plots\n",
-    "9. Conclusions"
+    "4. Apply CNN and display plots\n",
+    "5. Tunning and use different parameters to train the model\n",
+    "6. Apply CNN on the test data\n",
+    "7. Takeaways"
    ]
   },
   {
@@ -1163,7 +1161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. Conclusions"
+    "### 7. Takeways"
    ]
   },
   {
