Update Table of Contents

--- a/CNN-Cancer-Detection.ipynb
+++ b/CNN-Cancer-Detection.ipynb
@@ -306,8 +306,11 @@
    "metadata": {},
    "source": [
     "Plans: Apply the method with params such as:\n",
+    "\n",
     "1/ batch_size = 32 means each iteration will have 32 items\n",
+    "\n",
     "2/ epoch = 20 means the data will go through the training process 20 times\n",
+    "\n",
     "3/ dense and number of neurons mean how many layers and the number of nuerons in each layer."
    ]
   },
@@ -654,9 +657,13 @@
    "metadata": {},
    "source": [
     "Discussions: As epoch increments, we can see train loss and validation loss decrementing which show the models is being improved.\n",
+    "\n",
     "The train loss and accuracy are reaching their peaks which means they cant be improved much futher.\n",
+    "\n",
     "Validation loss and accuracy are stable but they are up and down which is normal.\n",
+    "\n",
     "For example: The values start at accuracy: 0.7747 - loss: 0.4849 - val_accuracy: 0.8438 - val_loss: 0.3479\n",
+    "\n",
     "At epoch 20th, the values are accuracy: 0.9083 - loss: 0.2366 - val_accuracy: 0.9097 - val_loss: 0.2271"
    ]
   },
@@ -679,9 +686,12 @@
    "metadata": {},
    "source": [
     "Plans: Apply the method with params such as:\n",
+    "\n",
     "1/ batch_size = 32 means each iteration will have 32 items\n",
+    "\n",
     "2/ epoch = 5 means how many times the data will go back and forth in the training process.\n",
-    "3/ dense and number of neurons mean how many layers and the number of nuerons in each layer are."
+    "\n",
+    "3/ dense and number of neurons mean how many layers and the number of nuerons in each layer are.\n"
    ]
   },
   {
@@ -1175,11 +1185,17 @@
    },
    "source": [
     "In conclusion, the first model yields the best results because it has more epoch and more dense in each layer; therefore, the data goes through a lot iterations which improves accuracy and reduces loss. \n",
+    "\n",
     "Validation Loss: 0.22950389981269836\n",
     "Validation Accuracy: 0.9084194898605347\n",
+    "\n",
     "The results seem to be impressive. \n",
+    "\n",
     "The loss and result diagrams show the significant trendlines at the begining and they also dont change much at the end. This means the model had peaked and couldnt be improve much more.\n",
-    "What I could improve was incrementing buffer size so some of the training didn't need to shuffle which may alter the results.\n"
+    "\n",
+    "What I could improve was incrementing buffer size so some of the training didn't need to shuffle which may alter the results.\n",
+    "Also, I could increase the number of epoch so get better results.\n",
+    "The speed of training can be improved if the better computer with GPU that supported model training.\n"
    ]
   }
  ],
